# spherapy

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py  spherapy.conf
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yaml  bug_report.yaml  config.yml  feature_request.yaml  question.yaml
.github/workflows/: pr.yml  release.yml
docs/: README.md  README.me  orbit.md  timespan.md  updater.md  util.celestrak.md  util.constants.md  util.credentials.md  util.elements_u.md  util.epoch_u.md  util.exceptions.md  util.md  util.orbital_u.md  util.spacetrack.md
spherapy/: __init__.py  __main__.py  orbit.py  timespan.py  updater.py
spherapy/scripts/: create_credentials.py  test_basic_functionality.py
spherapy/util/: celestrak.py  constants.py  credentials.py  elements_u.py  epoch_u.py  exceptions.py  list_u.py  orbital_u.py  paths_u.py  spacetrack.py
tests/spherapy/: test_orbit.py  test_timespan.py  zarya_20041227-20041231.tle  zarya_20211124.tle
tests/utils/: test_epoch_u.py
tools/: create_venvs.sh  test_python_versions.sh
